--- a/.github/workflows/cd-dfae-project-public-ui.yml
+++ b/.github/workflows/cd-dfae-project-public-ui.yml
@@ -14,6 +14,7 @@ on:
 env:
   IMAGE_NAME: dfa-portal-ui-public
   WORKING_DIRECTORY: ./dfa-public/src/UI
+  IMAGE_TAG: dev
 
 jobs:
   build:
@@ -30,6 +31,13 @@ jobs:
           username: ${{ secrets.DOCKER_PROJECT_USERNAME }}
           password: ${{ secrets.DOCKER_PROJECT_PASSWORD_BUILDER }}
 
+      # Get SHORT_SHA to tag images
+      - name: Get short SHA
+        id: short_sha
+        run: |
+          echo "::set-output name=SHORT_SHA::$(git rev-parse --short HEAD)"
+          echo "Short SHA: $SHORT_SHA"
+
       - name: Build Image
         working-directory: ${{env.WORKING_DIRECTORY}}
         run: |
@@ -37,11 +45,11 @@ jobs:
 
       - name: Tag Image
         run: |
-          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:dev
+          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ env.IMAGE_TAG }}
 
       - name: Docker Push
         run: |
-          docker push ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:dev
+          docker push ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ env.IMAGE_TAG }}
 
       - name: Checkout ArgoCD Repo
         id: gitops
@@ -63,8 +71,11 @@ jobs:
           # Update the Helm values file with the new image tag and version
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
-          sed -i  "s/uitag: .*/uitag: dev # Image Updated on $DATETIME/" ../deploy/dev_public_values.yaml
-          sed -i  "s/uitag: .*/uitag: dev # Image Updated on $DATETIME/"  dfa-portal-ui-public/values.yaml
+          sed -i  "s/uipubtag: .*/uipubtag: dev # Image Updated on $DATETIME/" ../deploy/dev_public_values.yaml
+          sed -i  "s/uipubversion: .*/uipubversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/dev_public_values.yaml
+
+          sed -i  "s/uipubtag: .*/uipubtag: dev # Image Updated on $DATETIME/"  dfa-portal-ui-public/values.yaml
+          sed -i  "s/uipubversion: .*/uipubversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/"  dfa-portal-ui-public/values.yaml
 
           # Commit and push the changes
           git config --global user.email "actions@github.com"
