--- a/.github/workflows/cd-dfae-project-ui.yml
+++ b/.github/workflows/cd-dfae-project-ui.yml
@@ -12,6 +12,7 @@ on:
 env:
   IMAGE_NAME: dfa-portal-ui
   WORKING_DIRECTORY: ./dfa/src/UI
+  IMAGE_TAG: dev
 
 jobs:
   build:
@@ -28,6 +29,12 @@ jobs:
           username: ${{ secrets.DOCKER_PROJECT_USERNAME }}
           password: ${{ secrets.DOCKER_PROJECT_PASSWORD_BUILDER }}
 
+      - name: Get short SHA
+        id: short_sha
+        run: |
+          echo "::set-output name=SHORT_SHA::$(git rev-parse --short HEAD)"
+          echo "Short SHA: $SHORT_SHA"
+
       - name: Build Image
         working-directory: ${{env.WORKING_DIRECTORY}}
         run: |
@@ -36,11 +43,11 @@ jobs:
 
       - name: Tag Image
         run: |
-          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:dev
+          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ env.IMAGE_TAG }}
 
       - name: Docker Push
         run: |
-          docker push ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:dev
+          docker push ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ env.IMAGE_TAG }}
 
       - name: Checkout ArgoCD Repo
         id: gitops
@@ -63,7 +70,10 @@ jobs:
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
           sed -i  "s/uitag: .*/uitag: dev # Image Updated on $DATETIME/" ../deploy/dev_values.yaml
+          sed -i  "s/uiversion: .*/uiversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/dev_values.yaml
+
           sed -i  "s/uitag: .*/uitag: dev # Image Updated on $DATETIME/"  dfa-portal-ui/values.yaml
+          sed -i  "s/uiversion: .*/uiversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/"  dfa-portal-ui/values.yaml
           
           # Commit and push the changes
           git config --global user.email "actions@github.com"
