--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ Bin/
 obj/
 Obj/
 
-dfa-public/src/UI/embc-dfa/src/app/core/api/services/
+# dfa-public/src/UI/embc-dfa/src/app/core/api/services/
 
 dfa-public/src/UI/embc-dfa/package-lock.json
