--- a/pdf-service/Dockerfile
+++ b/pdf-service/Dockerfile
@@ -21,35 +21,43 @@ ENV LD_LIBRARY_PATH=/usr/lib:/usr/local/lib:$LD_LIBRARY_PATH
 ARG VERSION
 ENV VERSION=$VERSION
 USER 0
-RUN \
-    apt-get update && apt-get install -y \
-    libgdiplus \
-    libx11-dev \
-    libxcursor1 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxext6 \
-    libxfixes3 \
-    libjpeg62-turbo \
-    libfontconfig1 \
-    libxrender1 \
-    xfonts-75dpi \
-    xfonts-base \
-    libssl3 \
-    libstdc++6 \
-    zlib1g \
-    libfreetype6 \
-    libpng16-16\
-    libxcb1 \
-    libx11-xcb1 \
-    gdebi \
-    wkhtmltopdf \
-    && ln -s /usr/lib/libgdiplus.so /lib/x86_64-linux-gnu/libgdiplus.so \
-    && ln -s /usr/local/lib/libwkhtmltox.so /usr/lib/libwkhtmltox.so \
-    && rm -rf /var/lib/apt/lists/* \
-    && mkdir /usr/local/bin/Linux \
-    && echo $'#!/usr/bin/env sh\n    /usr/local/bin/wkhtmltopdf --zoom 1.3 $@ \n    ' > /usr/local/bin/Linux/wkhtmltopdf     \
-    && chmod +x /usr/local/bin/Linux/wkhtmltopdf
+RUN apt-get update && ln -s /usr/lib/libgdiplus.so /lib/x86_64-linux-gnu/libgdiplus.so
+RUN apt-get install -y --no-install-recommends zlib1g fontconfig libfreetype6 libx11-6 libxext6 libxrender1 wget gdebi
+RUN wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.stretch_amd64.deb
+RUN wget http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+RUN dpkg -i libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+RUN gdebi --n wkhtmltox_0.12.5-1.stretch_amd64.deb
+RUN ln -s /usr/local/lib/libwkhtmltox.so /usr/lib/libwkhtmltox.so
+
+#RUN \
+#    apt-get update && apt-get install -y \
+#    libgdiplus \
+#    libx11-dev \
+#    libxcursor1 \
+#    libxcomposite1 \
+#    libxdamage1 \
+#    libxext6 \
+#    libxfixes3 \
+#    libjpeg62-turbo \
+#    libfontconfig1 \
+#    libxrender1 \
+#    xfonts-75dpi \
+#    xfonts-base \
+#    libssl3 \
+#    libstdc++6 \
+#    zlib1g \
+#    libfreetype6 \
+#    libpng16-16\
+#    libxcb1 \
+#    libx11-xcb1 \
+#    gdebi \
+#    wkhtmltopdf \
+#    && ln -s /usr/lib/libgdiplus.so /lib/x86_64-linux-gnu/libgdiplus.so \
+#    && ln -s /usr/local/lib/libwkhtmltox.so /usr/lib/libwkhtmltox.so \
+#    && rm -rf /var/lib/apt/lists/* \
+#    && mkdir /usr/local/bin/Linux \
+#    && echo $'#!/usr/bin/env sh\n    /usr/local/bin/wkhtmltopdf --zoom 1.3 $@ \n    ' > /usr/local/bin/Linux/wkhtmltopdf     \
+#    && chmod +x /usr/local/bin/Linux/wkhtmltopdf
 USER 1001
 
 EXPOSE 8080
