--- a/.github/workflows/zap-scan-public-config.yml
+++ b/.github/workflows/zap-scan-public-config.yml
@@ -19,4 +19,4 @@ jobs:
         uses: zaproxy/action-baseline@v0.6.1
         with:
           target: 'https://dfa-public-sector-dev.apps.silver.devops.gov.bc.ca'
-          token: ${{ secrets.GITHUB_TOKEN }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
